<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:paddingBottom="16dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_about_app_icon"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_marginTop="72dp"
            android:layout_marginBottom="72dp"
            android:padding="8dp"
            android:transitionName="transition_about_icon"
            app:layout_constraintEnd_toStartOf="@id/tv_about_app_name"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_about_app_name"
            style="@style/FontSourceSansSemiBold"
            android:layout_width="wrap_content"
            android:layout_height="72dp"
            android:layout_marginTop="72dp"
            android:gravity="center"
            android:paddingStart="16dp"
            android:transitionName="transition_about_title"
            android:paddingEnd="16dp"
            android:text="@string/app_name"
            android:textColor="@color/textColorPrimary"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/iv_about_app_icon"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cv_about_developer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintTop_toBottomOf="@id/tv_about_app_name">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingStart="16dp"
                android:paddingTop="16dp"
                android:paddingEnd="16dp">

                <com.google.android.material.textview.MaterialTextView
                    style="@style/FontSourceSansRegular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/app_designed_and_developed_by"
                    android:textColor="@color/textColorSecondary"
                    android:textSize="14sp" />

                <com.google.android.material.textview.MaterialTextView
                    style="@style/FontSourceSansSemiBold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="4dp"
                    android:text="@string/jain_chiranjeev"
                    android:textColor="@color/textColorPrimary"
                    android:textSize="24sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="4dp">

                    <androidx.appcompat.widget.AppCompatImageButton
                        android:id="@+id/ib_so"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_margin="4dp"
                        android:background="@color/transparent"
                        android:padding="12dp"
                        android:scaleType="fitCenter"
                        android:tint="@color/textColorSecondary"
                        android:tooltipText="StackOverflow Profile" />

                    <androidx.appcompat.widget.AppCompatImageButton
                        android:id="@+id/ib_github"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_margin="4dp"
                        android:background="@color/transparent"
                        android:padding="12dp"
                        android:scaleType="fitCenter"
                        android:tint="@color/textColorSecondary" />

                    <androidx.appcompat.widget.AppCompatImageButton
                        android:id="@+id/ib_website"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_margin="4dp"
                        android:background="@color/transparent"
                        android:padding="12dp"
                        android:scaleType="fitCenter"
                        android:tint="@color/textColorSecondary" />

                    <androidx.appcompat.widget.AppCompatImageButton
                        android:id="@+id/ib_linkedin"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_margin="4dp"
                        android:background="@color/transparent"
                        android:padding="12dp"
                        android:scaleType="fitCenter"
                        android:tint="@color/textColorSecondary" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:orientation="horizontal"
                    android:padding="4dp">

                    <androidx.appcompat.widget.AppCompatImageButton
                        android:id="@+id/ib_twitter"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_margin="4dp"
                        android:background="@color/transparent"
                        android:padding="12dp"
                        android:scaleType="fitCenter"
                        android:tint="@color/textColorSecondary" />

                    <androidx.appcompat.widget.AppCompatImageButton
                        android:id="@+id/ib_send_email"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_margin="4dp"
                        android:background="@color/transparent"
                        android:padding="12dp"
                        android:scaleType="fitCenter"
                        android:tint="@color/textColorSecondary" />

                </LinearLayout>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_libraries_used"
            style="@style/FontSourceSansSemiBold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:gravity="center_horizontal"
            android:padding="8dp"
            android:text="Libraries Used"
            android:textColor="@color/textColorPrimary"
            android:textSize="24sp"
            app:layout_constraintTop_toBottomOf="@id/cv_about_developer" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cv_lib_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:contentPaddingBottom="16dp"
            app:contentPaddingLeft="16dp"
            app:contentPaddingRight="16dp"
            app:contentPaddingTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_libraries_used">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:text="@string/glide_name"
                            android:textColor="@color/textColorPrimary"
                            android:textSize="20sp" />

                        <com.google.android.material.textview.MaterialTextView
                            style="@style/FontSourceSansBold"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginTop="4dp"
                            android:layout_marginBottom="4dp"
                            android:layout_weight="1"
                            android:gravity="center_vertical"
                            android:text="@string/glide_developer"
                            android:textColor="@color/textColorSecondary"
                            android:textColorHint="@color/textColorSecondary"
                            android:textSize="16sp" />

                    </LinearLayout>

                    <ImageButton
                        android:id="@+id/ib_glide_github"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:background="@color/transparent"
                        android:padding="16dp"
                        android:scaleType="fitCenter"
                        android:tint="@color/textColorSecondary" />

                    <ImageButton
                        android:id="@+id/ib_glide_website"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:background="@color/transparent"
                        android:padding="16dp"
                        android:scaleType="fitCenter"
                        android:tint="@color/textColorSecondary" />

                </LinearLayout>

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/glide_description"
                    android:textColorHint="@color/textColorSecondary"
                    android:textSize="16sp" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cv_lib_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:contentPaddingBottom="16dp"
            app:contentPaddingLeft="16dp"
            app:contentPaddingRight="16dp"
            app:contentPaddingTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cv_lib_1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:text="@string/msv_name"
                            android:textColor="@color/textColorPrimary"
                            android:textSize="20sp" />

                        <com.google.android.material.textview.MaterialTextView
                            style="@style/FontSourceSansBold"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginTop="4dp"
                            android:layout_marginBottom="4dp"
                            android:layout_weight="1"
                            android:gravity="center_vertical"
                            android:text="@string/msv_developer"
                            android:textColor="@color/textColorSecondary"
                            android:textColorHint="@color/textColorSecondary"
                            android:textSize="16sp" />

                    </LinearLayout>

                    <ImageButton
                        android:id="@+id/ib_msv_github"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:background="@color/transparent"
                        android:padding="16dp"
                        android:scaleType="fitCenter"
                        android:tint="@color/textColorSecondary" />

                    <ImageButton
                        android:id="@+id/ib_msv_website"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:background="@color/transparent"
                        android:padding="16dp"
                        android:scaleType="fitCenter"
                        android:tint="@color/textColorSecondary" />

                </LinearLayout>

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/msv_description"
                    android:textColorHint="@color/textColorSecondary"
                    android:textSize="16sp" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cv_lib_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:contentPaddingBottom="16dp"
            app:contentPaddingLeft="16dp"
            app:contentPaddingRight="16dp"
            app:contentPaddingTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cv_lib_2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:text="@string/aztec_name"
                            android:textColor="@color/textColorPrimary"
                            android:textSize="20sp" />

                        <com.google.android.material.textview.MaterialTextView
                            style="@style/FontSourceSansBold"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginTop="4dp"
                            android:layout_marginBottom="4dp"
                            android:layout_weight="1"
                            android:gravity="center_vertical"
                            android:text="@string/aztec_developer"
                            android:textColor="@color/textColorSecondary"
                            android:textColorHint="@color/textColorSecondary"
                            android:textSize="16sp" />

                    </LinearLayout>

                    <ImageButton
                        android:id="@+id/ib_aztec_github"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:background="@color/transparent"
                        android:padding="16dp"
                        android:scaleType="fitCenter"
                        android:tint="@color/textColorSecondary" />

                    <ImageButton
                        android:id="@+id/ib_aztec_website"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:background="@color/transparent"
                        android:padding="16dp"
                        android:scaleType="fitCenter"
                        android:tint="@color/textColorSecondary" />

                </LinearLayout>

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/aztec_description"
                    android:textColorHint="@color/textColorSecondary"
                    android:textSize="16sp" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>